 ! = Bug fixes since previous version
 ~ = Changes   since previous version

 1.8 beta 3: (2010-??-??)
 ! Fixed: NullPointerException when renaming an GPX file entry
 ! MyTopo URL updated and fixed
 ~ Unnecessary restriction of RMaps / BigPlanet Tracks to zoom 17 removed
 + New map source: Microsoft Maps with hill shade
 ~ Custom tile settings now possible with SportsTracker

 1.8 beta 2: (2010-09-13)
 + AlpineQuestMap atlas creator updated (patch by Camille) 
 + New map source: Navitel (Russian)
 ! GPS Sport Tracker: space removed in tile file name
 ! MyTopo URL updated 

 1.8 beta 1: (2010-08-24)
 ! Fixed PNG 256 color output
 + New atlas format: OruxMaps (Android)  
 + New atlas format: Glopus Map File (AFTrack and others)
 ~ BigPlanet SQL commit rate changed 
 ! #2963490 Using custom tile size with multi-layer maps creates black map 
    tiles
 + GPX file editor improved
 ~ Austrian Map removed (does not work anymore - unable to fix)
 + Yandex Map & Sat added (works only with selected atlas creators because of a 
    different projection category - Yandex uses an ellipsoid)
 ~ Map source change: Emapi.pl replaces Emapa.pl
 + New atlas format: PathAway
 ! Alpha transparency problem with multi-layer maps        
 + New atlas format: AFTrack (OSZ)
 ~ CacheBox layer name uses now the map source name
 + New atlas format: AlpineQuestMap (AQM)
 + New atlas format: Ublox
 ! Fixed OSM Hiking relief
 + New map source: Cykloatlas with relief
 + Custom Map Sources extended to multi-layer map source (2 layers)
 + New map source: Statkart sea/nautical (AKA "sjo_hovedkart2")
 ~ TouretechQV: Corrected "projparams" (removed unset UTM zone) - see #2970353
 + New atlas format: Google Earth Overlay (unrestricted Google Custom Map) 
 ! Fixed: #3008934 (MM1B calculation problem in .map file)
 + New map source: MyTopo.com (USA only)
 + New map source: Yahoo Maps Japan
 + New atlas format: GPS Sports Tracker
 + New atlas format: Sports Tracker
 + New map source: OSM Hikebikemap.de